--- a/tools/addon-theme-switcher/package.json
+++ b/tools/addon-theme-switcher/package.json
@@ -19,25 +19,17 @@
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "src/index.ts",
+  "module": "dist/es/index.js",
   "types": "dist/types/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "default": "./dist/esm/index.js"
-    }
-  },
+  "sideEffects": false,
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "tsc-watch --onSuccess 'pnpm build'",
-    "build": "npm-run-all clean build:*",
-    "build:esm": "tsc --module es2015 --outDir dist/esm && tsc-alias --dir dist/esm",
-    "build:cjs": "tsc --module commonjs --outDir dist/cjs && tsc-alias --dir dist/cjs",
-    "clean": "npx rimraf ./dist"
+    "dev": "vite",
+    "build": "pnpm clean && vite build",
+    "clean": "del-cli dist"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
@@ -49,17 +41,13 @@
     "@storybook/theming": "^6.4.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tsc-alias": "^1.7.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "@hitachivantara/uikit-core": "workspace:*"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.5",
-    "npm-run-all": "^4.1.5",
-    "tsc-alias": "^1.6.5",
-    "tsc-watch": "^5.0.3",
+    "del-cli": "^5.0.0",
     "typescript": "^4.6.3"
   }
 }
