--- a/packages/styles/tsconfig.json
+++ b/packages/styles/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "baseUrl": "src",
-    "declarationDir": "dist/types"
+    "rootDir": "src",
+    "composite": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["dist"],
+  "references": []
 }
