--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,71 +2,55 @@
   "name": "@hitachivantara/uikit-core",
   "version": "5.0.0",
   "private": false,
+  "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit core React components for the Hitachi Vantara Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
-  "license": "Apache-2.0",
+  "main": "./src/index.ts",
   "keywords": [
     "hitachi-vantara",
     "design-system",
     "ui-kit",
     "react",
-    "typescript",
-    "wai-aria"
+    "typescript"
   ],
-  "author": {
-    "name": "Hitachi Vantara UI Kit Team"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
   },
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs.js",
-      "import": "./dist/index.es.js"
-    }
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
-  "sideEffects": false,
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "dev": "vite build --watch",
-    "build": "tsc && vite build",
+    "build": "pnpm clean && tsc -b",
     "test": "vitest run",
     "test:update": "vitest -u",
     "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "clean": "npx rimraf dist"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@hitachivantara/uikit-icons": "workspace:*",
     "@hitachivantara/uikit-styles": "workspace:*",
-    "@styled-system/variant": "^5.1.5",
-    "clsx": "^1.2.1",
-    "styled-system": "^5.1.5",
-    "vite": "^3.2.3",
-    "vite-plugin-dts": "^1.7.0",
-    "vite-tsconfig-paths": "^3.5.2"
+    "clsx": "^1.2.1"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.5",
-    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
-    "@vitest/ui": "^0.25.1",
-    "jsdom": "^20.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.8.4",
-    "vitest": "^0.25.1"
+    "jsdom": "^20.0.3",
+    "vitest": "^0.25.3"
+  },
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=16.6.0"
   }
 }
