--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,30 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "lib": ["DOM", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "target": "es5",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "@emotion/react",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react",
+    "noEmit": false,
     "baseUrl": ".",
     "paths": {
-      "@hitachivantara/uikit-compat": ["packages/compat/src"],
       "@hitachivantara/uikit-core": ["packages/core/src"],
       "@hitachivantara/uikit-icons": ["packages/icons/bin"],
       "@hitachivantara/uikit-styles": ["packages/styles/src"]
     },
-    "preserveSymlinks": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "preserveSymlinks": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["app", "node_modules"]
 }
