chore: fix project setup

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,11 +13,11 @@
   ],
   "plugins": ["@typescript-eslint"],
   "env": {
-    "es6": true,
+    "es2021": true,
     "browser": true,
     "node": true
   },
-  "ignorePatterns": ["dist", "node_modules"],
+  "ignorePatterns": ["*.d.ts", "dist", "node_modules"],
   "rules": {
     "react/jsx-filename-extension": "off",
     "import/no-extraneous-dependencies": "off"
