--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -26,9 +26,9 @@
     "build:ts": "tsc -b",
     "convert": "run-s clean convert:*",
     "convert:optimize": "svgo --config=./svgo.config.js -r -f assets assets",
-    "convert:svg": "ts-node --esm -r tsconfig-paths/register src/svgToReact.ts dir --input assets --output bin --force",
+    "convert:svg": "ts-node -r tsconfig-paths/register src/svgToReact.ts dir --input assets --output bin --force",
     "convert:copy": "npx cpy-cli \"src/IconBase*\" \"bin\"",
-    "clean": "npx rimraf dist bin",
+    "clean": "npx rimraf dist bin tsconfig.tsbuildinfo",
     "prepare": "pnpm convert"
   },
   "peerDependencies": {
