--- a/packages/icons/tsconfig.json
+++ b/packages/icons/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "allowJs": true,
     "outDir": "dist",
     "rootDir": "bin",
     "composite": true
@@ -14,7 +15,7 @@
   },
   "references": [
     {
-      "path": "../../packages/styles/tsconfig.json"
+      "path": "../styles/tsconfig.json"
     }
   ]
 }
