--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,11 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "es5",
-    "moduleResolution": "NodeNext",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "@emotion/react",
-    "noEmit": false,
     "baseUrl": ".",
     "paths": {
       "@hitachivantara/uikit-core": ["packages/core/src"],
       "@hitachivantara/uikit-icons": ["packages/icons/bin"],
       "@hitachivantara/uikit-styles": ["packages/styles/src"]
-    },
-    "noImplicitAny": false,
-    "preserveSymlinks": true
-  },
-  "exclude": ["app", "node_modules"]
+    }
+  }
 }
