--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,7 +38,8 @@
   "dependencies": {
     "@hitachivantara/uikit-icons": "workspace:*",
     "@hitachivantara/uikit-styles": "workspace:*",
-    "clsx": "^1.2.1"
+    "clsx": "^1.2.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
