chore: downgrade storybook to 6.x and fix packages build

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,7 @@
     "test:update": "vitest -u",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "clean": "npx rimraf dist tsconfig.tsbuildinfo"
+    "clean": "npx rimraf ./{dist,*.tsbuildinfo}"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
