--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "Apache-2.0",
   "scripts": {
     "dev": "pnpm -F='./app' dev",
-    "doc": "storybook dev -p 6006 --no-manager-cache --no-open",
+    "doc": "start-storybook -p 6006 --no-manager-cache",
     "build": "pnpm -r -F=!'./app' -F=!'./toolsn' build",
-    "build:doc": "storybook build",
+    "build:doc": "build-storybook",
     "lint": "eslint --ext .ts,.tsx --cache",
     "lint-staged": "lint-staged",
     "format": "npx prettier -w .",
@@ -28,11 +28,10 @@
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@playwright/test": "^1.27.1",
-    "@storybook/addon-a11y": "7.0.0-alpha.48",
-    "@storybook/addon-essentials": "7.0.0-alpha.48",
-    "@storybook/addon-links": "7.0.0-alpha.48",
-    "@storybook/react": "7.0.0-alpha.48",
-    "@storybook/react-vite": "7.0.0-alpha.48",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/builder-vite": "^0.1.29",
+    "@storybook/core-common": "^6.4.22",
+    "@storybook/react": "^6.4.22",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
@@ -48,7 +47,6 @@
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "7.0.0-alpha.48",
     "typescript": "^4.8.4",
     "vite": "^3.2.4",
     "vite-tsconfig-paths": "^3.5.2",
