--- a/tools/addon-theme-switcher/tsconfig.json
+++ b/tools/addon-theme-switcher/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "ES5",
     "outDir": "dist",
     "rootDir": "src",
     "composite": true
