--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@storybook/react": "^6.4.22",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "c8": "^7.12.0",
