docs: Downgrade Storybook, add UI Kit theme, add Colors and Icons sections

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "@hitachivantara/uikit-core": ["packages/core/src"],
       "@hitachivantara/uikit-icons": ["packages/icons/bin"],
+      "@hitachivantara/uikit-icons/dist/*": ["packages/icons/bin/*"],
       "@hitachivantara/uikit-styles": ["packages/styles/src"]
     }
   }
