--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
+    "@mui/material": "^5.11.0",
     "@playwright/test": "^1.27.1",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/builder-vite": "^0.1.29",
