--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,7 @@
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
