fix(deps): add missing core-js to core/lab

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,6 +50,7 @@
     "@types/react-table": "^7.7.12",
     "attr-accept": "^2.2.2",
     "clsx": "^1.2.1",
+    "core-js": "^3.26.1",
     "dayjs": "^1.11.4",
     "deep-diff": "^1.0.2",
     "detect-browser": "^5.3.0",
