--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "test:e2e": "npx playwright test --config=config/playwright.config.ts",
     "clean": "npx rimraf ./{packages,tools}/*/{dist,bin,*.tsbuildinfo}",
     "wipe": "pnpm clean && npx rimraf **/{node_modules,pnpm-lock.yaml}",
-    "prepare": "npx husky install",
-    "typecheck": "pnpm -r -F='./packages/**' typecheck"
+    "typecheck": "pnpm -r -F='./packages/**' typecheck",
+    "install": "npx husky install",
+    "preinstall": "npx only-allow pnpm",
+    "publish:next": "pnpm build && npx lerna publish --yes --conventional-prerelease --preid next"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
@@ -38,11 +40,13 @@
     "@testing-library/user-event": "^14.4.3",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "jsdom": "^20.0.3",
+    "lerna": "^6.3.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
@@ -72,5 +76,8 @@
   },
   "engines": {
     "node": ">=16.16.0"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
