--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -6,6 +6,7 @@
   "description": "A collection of icons to use with Hitachi Vantara's React Components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "main": "./bin/index.ts",
+  "sideEffects": false,
   "keywords": [
     "hitachi-vantara",
     "design-system",
@@ -29,7 +30,7 @@
     "convert:svg": "ts-node -r tsconfig-paths/register src/svgToReact.ts dir --input assets --output bin --force",
     "convert:copy": "npx cpy-cli \"src/IconBase*\" \"bin\"",
     "clean": "npx rimraf ./{dist,bin,*.tsbuildinfo}",
-    "prepare": "pnpm convert"
+    "install": "pnpm convert"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -51,11 +52,14 @@
     "tsconfig-paths": "^4.1.0",
     "yargs": "^17.6.2"
   },
-  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
   "engines": {
     "node": ">=16.6.0"
-  }
+  },
+  "gitHead": "1d9cb5bd8000d79b36270db95cee2a640d50ffdc"
 }
