--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@hitachivantara/uikit-styles",
-  "version": "5.0.0",
+  "version": "5.1.0-next.0",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit styling solution for the Hitachi Vantara Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "main": "./src/index.ts",
+  "sideEffects": false,
   "keywords": [
     "hitachi-vantara",
     "design-system",
@@ -33,7 +34,6 @@
   "devDependencies": {
     "tsc-alias": "^1.8.2"
   },
-  "sideEffects": false,
   "publishConfig": {
     "access": "public"
   },
