--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-# registry=http://localhost:4873
+registry=https://htokpi-ip-93-108-46-243.expose.sh
 @hv:registry=https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/uikit-npm-release-orl/
 
 # Make storybook happy with its deps
