--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-icons",
-  "version": "5.0.0",
+  "version": "5.1.0-next.0",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "A collection of icons to use with Hitachi Vantara's React Components.",
