--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,6 +42,7 @@
     "@hitachivantara/uikit-icons": "workspace:*",
     "@hitachivantara/uikit-styles": "workspace:*",
     "clsx": "^1.2.1",
+    "detect-browser": "^5.3.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
