--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-registry=https://htokpi-ip-93-108-46-243.expose.sh
-@hv:registry=https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/uikit-npm-release-orl/
+registry=https://lxbovo-ip-93-108-46-243.expose.sh
+# @hv:registry=https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/uikit-npm-release-orl/
 
 # Make storybook happy with its deps
 shamefully-hoist=true
