--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -30,7 +30,7 @@
     "convert:svg": "ts-node -r tsconfig-paths/register src/svgToReact.ts dir --input assets --output bin --force",
     "convert:copy": "npx cpy-cli \"src/IconBase*\" \"bin\"",
     "clean": "npx rimraf ./{dist,bin,*.tsbuildinfo}",
-    "prepare": "pnpm convert"
+    "install": "pnpm convert"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -52,6 +52,9 @@
     "tsconfig-paths": "^4.1.0",
     "yargs": "^17.6.2"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
