--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -34,6 +34,9 @@
   "devDependencies": {
     "tsc-alias": "^1.8.2"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
