--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-core",
-  "version": "5.1.0-next.0",
+  "version": "5.1.0-next.1",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit core React components for the Hitachi Vantara Design System.",
@@ -51,6 +51,9 @@
     "@types/react-dom": "^18.0.8",
     "tsc-alias": "^1.8.2"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
