--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-styles",
-  "version": "5.1.0-next.0",
+  "version": "5.1.0-next.1",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit styling solution for the Hitachi Vantara Design System.",
@@ -34,6 +34,9 @@
   "devDependencies": {
     "tsc-alias": "^1.8.2"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
