--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,7 +44,8 @@
     "clsx": "^1.2.1",
     "detect-browser": "^5.3.0",
     "lodash": "^4.17.21",
-    "react-google-charts": "^4.0.0"
+    "react-google-charts": "^4.0.0",
+    "react-resize-detector": "^7.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
