--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,10 +41,12 @@
   "dependencies": {
     "@hitachivantara/uikit-icons": "workspace:*",
     "@hitachivantara/uikit-styles": "workspace:*",
+    "@popperjs/core": "^2.11.6",
     "clsx": "^1.2.1",
     "detect-browser": "^5.3.0",
     "lodash": "^4.17.21",
     "react-google-charts": "^4.0.0",
+    "react-popper": "^2.3.0",
     "react-resize-detector": "^7.1.2"
   },
   "devDependencies": {
