--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
     "dev": "pnpm -F='./app' dev",
     "doc": "start-storybook -p 6006 --no-manager-cache",
     "build": "pnpm -r -F='./packages/**' build",
-    "build:doc": "build-storybook",
+    "build:doc": "build-storybook --docs -o dist --quiet",
     "lint": "eslint --ext .ts,.tsx --cache",
     "lint-staged": "lint-staged",
     "format": "npx prettier -w .",
-    "test": "pnpm --parallel -F='./packages/**' test",
+    "test": "pnpm -F='./packages/**' test",
     "test:e2e": "npx playwright test --config=config/playwright.config.ts",
     "clean": "npx rimraf ./{packages,tools}/*/{dist,bin,*.tsbuildinfo}",
     "wipe": "pnpm clean && npx rimraf **/{node_modules,pnpm-lock.yaml}",
     "typecheck": "pnpm -r -F='./packages/**' typecheck",
-    "prepare": "npx husky install",
+    "install": "npx husky install",
     "preinstall": "npx only-allow pnpm",
-    "ver": "npx lerna version --no-private --no-push --yes"
+    "publish:next": "pnpm build && npx lerna publish --yes --conventional-prerelease --preid next"
   },
   "devDependencies": {
+    "@applitools/eyes-storybook": "^3.30.2",
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@mui/material": "^5.11.0",
@@ -76,8 +77,5 @@
   },
   "engines": {
     "node": ">=16.16.0"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
