--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -54,6 +54,9 @@
     "@types/react-dom": "^18.0.8",
     "tsc-alias": "^1.8.2"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
