--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,7 +47,8 @@
     "lodash": "^4.17.21",
     "react-google-charts": "^4.0.0",
     "react-popper": "^2.3.0",
-    "react-resize-detector": "^7.1.2"
+    "react-resize-detector": "^7.1.2",
+    "react-window": "^1.8.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
