chore: publish next setup

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,4 @@
-# registry=http://localhost:4873
-@hv:registry=https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/uikit-npm-release-orl/
+# @hitachivantara:registry=https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/uikit-npm-release-orl/
 
 # Make storybook happy with its deps
 shamefully-hoist=true
