--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-icons",
-  "version": "5.1.0-next.0",
+  "version": "5.0.0-next.0",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "A collection of icons to use with Hitachi Vantara's React Components.",
@@ -30,7 +30,7 @@
     "convert:svg": "ts-node -r tsconfig-paths/register src/svgToReact.ts dir --input assets --output bin --force",
     "convert:copy": "npx cpy-cli \"src/IconBase*\" \"bin\"",
     "clean": "npx rimraf ./{dist,bin,*.tsbuildinfo}",
-    "prepare": "pnpm convert"
+    "install": "pnpm convert"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "cpy-cli": "^4.2.0",
     "html-to-react": "^1.5.0",
     "jsdom-no-contextify": "^3.1.0",
     "npm-run-all": "^4.1.5",
@@ -52,6 +53,9 @@
     "tsconfig-paths": "^4.1.0",
     "yargs": "^17.6.2"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
