--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
   "npmClient": "pnpm",
   "command": {
     "version": {
-      "allowBranch": "feat/*",
+      "allowBranch": ["master", "next*", "feat/*", "fix/*", "bug/*"],
       "message": "chore(release): publish",
       "conventionalCommits": true
     }
