--- a/package.json
+++ b/package.json
@@ -13,24 +13,26 @@
     "dev": "pnpm -F='./app' dev",
     "doc": "start-storybook -p 6006 --no-manager-cache",
     "build": "pnpm -r -F='./packages/**' build",
-    "build:doc": "build-storybook",
-    "lint": "eslint --ext .ts,.tsx --cache",
+    "build:doc": "build-storybook -o dist --docs --quiet",
+    "test": "pnpm -F='./packages/**' test",
+    "test:pa11y": "npx pa11y-ci -c config/pa11yci.config.js",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write .",
+    "lint": "eslint . --ext .ts,.tsx --cache",
+    "lint:fix": "pnpm lint --fix",
     "lint-staged": "lint-staged",
-    "format": "npx prettier -w .",
-    "test": "pnpm --parallel -F='./packages/**' test",
-    "test:e2e": "npx playwright test --config=config/playwright.config.ts",
-    "clean": "npx rimraf ./{packages,tools}/*/{dist,bin,*.tsbuildinfo}",
-    "wipe": "pnpm clean && npx rimraf **/{node_modules,pnpm-lock.yaml}",
     "typecheck": "pnpm -r -F='./packages/**' typecheck",
-    "prepare": "npx husky install",
+    "publish:next": "pnpm build && npx lerna publish --yes --conventional-prerelease --preid next",
     "preinstall": "npx only-allow pnpm",
-    "ver": "npx lerna version --no-private --no-push --yes"
+    "install": "npx husky install"
   },
   "devDependencies": {
+    "@applitools/eyes-storybook": "^3.30.2",
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@mui/material": "^5.11.0",
     "@playwright/test": "^1.27.1",
+    "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/builder-vite": "^0.1.29",
     "@storybook/core-common": "^6.4.22",
@@ -48,7 +50,7 @@
     "jsdom": "^20.0.3",
     "lerna": "^6.3.0",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -76,8 +78,5 @@
   },
   "engines": {
     "node": ">=16.16.0"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
