--- a/tools/addon-theme-switcher/package.json
+++ b/tools/addon-theme-switcher/package.json
@@ -13,8 +13,8 @@
   ],
   "scripts": {
     "build": "pnpm clean && tsc",
-    "clean": "npx rimraf ./{dist,*.tsbuildinfo}",
-    "prepare": "pnpm build"
+    "clean": "rimraf ./{dist,*.tsbuildinfo}",
+    "install": "pnpm build"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
@@ -33,5 +33,8 @@
   },
   "engines": {
     "node": ">=16.6.0"
+  },
+  "devDependencies": {
+    "rimraf": "^4.1.2"
   }
 }
