--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,6 +47,7 @@
     "detect-browser": "^5.3.0",
     "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.21",
+    "notistack": "^2.0.8",
     "react-google-charts": "^4.0.0",
     "react-popper": "^2.3.0",
     "react-resize-detector": "^7.1.2",
