--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,6 +45,7 @@
     "@popperjs/core": "^2.11.6",
     "attr-accept": "^2.2.2",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "detect-browser": "^5.3.0",
     "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.21",
@@ -52,6 +53,7 @@
     "react-google-charts": "^4.0.0",
     "react-popper": "^2.3.0",
     "react-resize-detector": "^7.1.2",
+    "react-table": "^7.8.0",
     "react-window": "^1.8.7"
   },
   "devDependencies": {
