--- a/package.json
+++ b/package.json
@@ -15,42 +15,42 @@
     "build": "pnpm -r -F='./packages/**' build",
     "build:doc": "build-storybook --docs -o dist --quiet",
     "test": "pnpm -F='./packages/**' test",
-    "test:pa11y": "npx pa11y-ci -c config/pa11yci.config.js",
+    "test:pa11y": "npx pa11y-ci -c .config/pa11yci.config.js",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --cache",
     "lint:fix": "pnpm lint --fix",
     "lint-staged": "lint-staged",
     "typecheck": "pnpm -r -F='./packages/**' typecheck",
-    "publish:next": "pnpm build && npx lerna publish --yes --conventional-prerelease --preid next",
+    "publish:next": "npx lerna publish --yes --conventional-prerelease",
     "preinstall": "npx only-allow pnpm",
-    "install": "npx husky install"
+    "prepare": "npx husky install .config/husky"
   },
   "devDependencies": {
     "@applitools/eyes-storybook": "^3.30.2",
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
-    "@mui/material": "^5.11.0",
-    "@playwright/test": "^1.27.1",
+    "@commitlint/cli": "^17.4.3",
+    "@commitlint/config-conventional": "^17.4.3",
+    "@mui/material": "^5.11.8",
+    "@playwright/test": "^1.30.0",
     "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/builder-vite": "^0.1.29",
-    "@storybook/core-common": "^6.4.22",
-    "@storybook/react": "^6.4.22",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/core-common": "^6.5.16",
+    "@storybook/react": "^6.5.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "conventional-changelog-cli": "^2.2.2",
-    "eslint": "^8.27.0",
+    "eslint": "^8.34.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
     "jsdom": "^20.0.3",
-    "lerna": "^6.3.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.8.3",
+    "lerna": "^6.5.1",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
