--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "build": "pnpm clean && tsc -b tsconfig.build.json && tsc-alias",
     "clean": "npx rimraf ./{dist,*.tsbuildinfo}",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
     "@styled-system/variant": "^5.1.5",
@@ -39,7 +40,9 @@
     "dist"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "main": "lib/index.js",
+    "typings": "lib/index.d.ts"
   },
   "engines": {
     "node": ">=16.6.0"
