--- a/tools/addon-theme-switcher/package.json
+++ b/tools/addon-theme-switcher/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "pnpm clean && tsc",
     "clean": "rimraf ./{dist,*.tsbuildinfo}",
-    "install": "pnpm build"
+    "prepare": "pnpm build"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
