--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -31,6 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORG_GHPAGES_DEPLOY_KEY: ${{ env.ORG_GHPAGES_DEPLOY_KEY }}
+          PUBLISH_FOLDER: ${{ inputs.publish-folder }}
           DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
           DOCUMENTATION_PUBLISH_FOLDER: uikit/${{ inputs.publish-folder }}
           DOCUMENTATION_PUBLISH_MESSAGE: "docs: documentation for ${{ inputs.publish-folder }} of ${{ github.repository }}"
