--- a/.github/workflows/tests-applitools.yml
+++ b/.github/workflows/tests-applitools.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Eyes Storybook
         run: |
-          npx eyes-storybook -f ${{ github.workspace }}/config/applitools.config.js
+          npx eyes-storybook -f ${{ github.workspace }}/.config/applitools.config.js
 
       - name: Archive Logs
         uses: actions/upload-artifact@v3
