--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,7 +29,8 @@
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
     "clean": "npx rimraf ./{dist,*.tsbuildinfo}",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepublishOnly": "pnpm build"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
@@ -50,19 +51,21 @@
     "notistack": "^2.0.8",
     "react-google-charts": "^4.0.0",
     "react-popper": "^2.3.0",
-    "react-resize-detector": "^7.1.2",
-    "react-window": "^1.8.7"
+    "react-resize-detector": "^8.0.3",
+    "react-window": "^1.8.8"
   },
   "devDependencies": {
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.10",
     "tsc-alias": "^1.8.2"
   },
   "files": [
     "dist"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "main": "lib/index.js",
+    "typings": "lib/index.d.ts"
   },
   "engines": {
     "node": ">=16.6.0"
