--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -30,7 +30,8 @@
     "convert:svg": "ts-node -r tsconfig-paths/register src/svgToReact.ts dir --input assets --output bin --force",
     "convert:copy": "npx cpy-cli \"src/IconBase*\" \"bin\"",
     "clean": "npx rimraf ./{dist,bin,*.tsbuildinfo}",
-    "install": "pnpm convert"
+    "prepare": "pnpm convert",
+    "prepublishOnly": "pnpm build"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -41,23 +42,25 @@
     "@hitachivantara/uikit-styles": "workspace:*"
   },
   "devDependencies": {
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.10",
     "cpy-cli": "^4.2.0",
     "html-to-react": "^1.5.0",
     "jsdom-no-contextify": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "recursive-readdir": "^2.2.3",
-    "svgo": "^3.0.1",
+    "svgo": "^3.0.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
+    "tsconfig-paths": "^4.1.2",
     "yargs": "^17.6.2"
   },
   "files": [
     "dist"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "main": "lib/index.js",
+    "typings": "lib/index.d.ts"
   },
   "engines": {
     "node": ">=16.6.0"
