--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,12 +20,12 @@ jobs:
     with:
       publish-folder: pr-${{ github.event.number }}
 
-  applitools:
-    name: Applitools
-    uses: ./.github/workflows/tests-applitools.yml
-    needs: [static-checks]
-    secrets:
-      APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
+  # applitools:
+  #   name: Applitools
+  #   uses: ./.github/workflows/tests-applitools.yml
+  #   needs: [static-checks]
+  #   secrets:
+  #     APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
 
   # pa11y:
   #   name: Pa11y
