--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,17 @@
     "@hitachivantara/uikit-icons": "workspace:*",
     "@hitachivantara/uikit-styles": "workspace:*",
     "@mui/material": "^5.10.13",
+    "@mui/styles": "^5.11.9",
+    "formik": "^2.2.9",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.5",
+    "react-router-dom": "^6.8.1",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.5",
